<!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="title_activity">Change details</string>
    <string name="title_changed_files">Changed files (%s)</string>
    <string name="text_comment">Comment:</string>
    <string name="text_revision">Revision:</string>
    <string name="text_user">User:</string>
    <string name="text_description">By %s on %s</string>
    <string name="text_button_open_in_browser">More details</string>
    <string name="text_info">Click on a file to view a diff</string>
</resources>
